Name:           async-pool
Version:        0.9.1
Synopsis:       A modified version of async that supports worker groups and many-to-many task dependencies
License-file:   LICENSE
License:        MIT
Author:         Simon Marlow, John Wiegley
Maintainer:     johnw@newartisans.com
Build-Type:     Simple
Cabal-Version:  >=1.10
Category:       System
Description:
  This library modifies the @async@ package to allow for task pooling and
  many-to-many dependencies between tasks.

Source-repository head
  type: git
  location: git://github.com/jwiegley/async-pool.git

Library
    default-language: Haskell98
    ghc-options:      -Wall
    build-depends:
        base               >= 4.6     && < 5
      , fgl                >= 5.4.2.2
      , async              >= 2.0.0.0
      , stm                >= 2.3
      , containers         >= 0.5.0.0
      , transformers
      , transformers-base
      , monad-control      >= 1.0     && < 1.1
    exposed-modules:
        Control.Concurrent.Async.Pool
    other-modules:
        Control.Concurrent.Async.Pool.Async
        Control.Concurrent.Async.Pool.Internal

test-suite test
    hs-source-dirs: . test
    default-language: Haskell2010
    main-is: main.hs
    type: exitcode-stdio-1.0
    ghc-options: -threaded -with-rtsopts "-N2"
    other-modules:
        Control.Concurrent.Async.Pool.Async
        Control.Concurrent.Async.Pool.Internal
    build-depends:
        base
      , async
      , stm
      , transformers
      , transformers-base
      , monad-control
      , fgl
      , containers
      , hspec                >= 1.4
      , time
