Name:           taskpool
Version:        0.0.2
Synopsis:       Manage pools of possibly interdependent tasks using STM and async
License-file:   LICENSE
License:        MIT
Author:         John Wiegley
Maintainer:     johnw@newartisans.com
Build-Type:     Simple
Cabal-Version:  >=1.10
Category:       System
Description:
  A taskpool is a network of tasks (where connection indicates dependency),
  where up to N independent tasks at time may execute concurrently.

Source-repository head
  type: git
  location: git://github.com/jwiegley/taskpool.git

Library
    default-language: Haskell98
    ghc-options:      -Wall
    build-depends:
        base                 >= 3 && < 5
      , fgl
      , async
      , stm
      , containers
    exposed-modules:
        Data.TaskPool
        Data.TaskPool.Internal

test-suite test
    hs-source-dirs: . test
    default-language: Haskell2010
    main-is: main.hs
    type: exitcode-stdio-1.0
    ghc-options: -threaded -with-rtsopts "-N2"
    other-modules:
        Data.TaskPool.Internal
    build-depends:
        base
      , async
      , stm
      , transformers
      , fgl
      , containers
      , hspec                >= 1.4

-- Test-suite doctests
--     Default-language: Haskell98
--     Type:    exitcode-stdio-1.0
--     Main-is: doctest.hs
--     Hs-source-dirs: test
--     Build-depends:      
--         base
--       , directory    >= 1.0
--       , doctest      >= 0.8
--       , filepath     >= 1.3
--       , semigroups   >= 0.4
